--- a/bdMap/js/01 addMap/index.html
+++ b/bdMap/js/01 addMap/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="initial-scale=1.0,user-scalable=no" />
 
-  <title>地图展示</title>
+  <title>地图底图</title>
   <style type="text/css">
     body {width:100%;height: 100%; overflow:hidden;margin: 0px;padding: 0px;font-family: "微软雅黑 Light";}
     html{height: 100%}
