--- a/bdMap/js/09 mapEvent/index.html
+++ b/bdMap/js/09 mapEvent/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="initial-scale=1.0,user-scalable=no" />
 
-  <title>地图信息窗口</title>
+  <title>地图聚合</title>
   <style type="text/css">
     body {width:100%;height: 100%; overflow:hidden;margin: 0px;padding: 0px;font-family: "微软雅黑 Light";}
     html{height: 100%}
@@ -39,14 +39,27 @@
     .infoBoxContent .rmb{float:right;color:#EB6100;font-size:14px;font-weight:bold;}
     .infoBoxContent a{color:#0041D9;text-decoration:none;}
   </style>
+  <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
+  <link rel="stylesheet" href="http://api.map.baidu.com/library/MarkerClusterer/1.2/src/MarkerClusterer_min.css"/>
+  <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css"/>
+  <link rel="stylesheet" href="http://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.css"/>
+
   <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
   <script type="text/javascript" src="http://api.map.baidu.com/library/TextIconOverlay/1.2/src/TextIconOverlay_min.js"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/MarkerClusterer/1.2/src/MarkerClusterer_min.js"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.js"></script>
+
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script type="text/javascript" src="/bdMap/js/BMapLib/RichMarker_min.js"></script>
-  <script type="text/javascript" src="/bdMap/js/BMapLib/InfoBox_min.js"></script>
+  <script type="text/javascript" src="/bdMap/js/BMapLib/RichMarker.min.js"></script>
+  <script type="text/javascript" src="/bdMap/js/BMapLib/InfoBox.min.js"></script>
 <!--  此Key为测试用，可能随时会被删除，请替换为自己的key。-->
 </head>
 <body>
+
+<div id="results" style="width:400px;height: 500px;position: absolute;margin-top: 230px;margin-left:5px;z-index: 100; background-color: #4FA5FC">
+
+</div>
 
 <div style="width: 200px;height: 100px;position: absolute;margin-top: 930px;margin-left:5px;z-index: 100;">
   <input style="width: 80px;height: 30px;padding-left: 10px; background-color: royalblue;color: antiquewhite; border-radius: 2px;" type="button" value="青花瓷" onclick="setMapStyleFromId()">
@@ -62,8 +75,23 @@
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="添加富标注" onclick="addRichMarker()">
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除富标注" onclick="removeRichMarker()">
 </div>
+<div style="width: 300px;height: 100px;position: absolute;margin-top: 930px;margin-left:520px;z-index: 101;">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="设置点聚合" onclick="setCluster()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="改变样式" onclick="changStyles()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除点聚合" onclick="withoutCluster()">
+</div>
 
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 930px;margin-left:900px;z-index: 101;">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="矢量图层" onclick="addCanvasLayer()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除图层" onclick="removeCanvasLayer()">
+</div>
+<div style="width: 300px;height: 100px;position: absolute;margin-top: 930px;margin-left:1080px;z-index: 101;">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="兴趣点搜索" onclick="poiSearch()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="附近搜索" onclick="nearbySearch()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="范围搜索" onclick="inBoundSearch()">
+</div>
   <div id="allmap"> </div>
+
 </body>
 </html>
 <script type="text/javascript">
@@ -79,9 +107,7 @@
   function setMap(){
     initialMap();
     addMapControls();
-    setMapStyleFromJson();
-
-    addInfoBoxes();
+    addDrawManager();
   }
   /**
    * 初始化地图
@@ -128,6 +154,8 @@
         BMAP_HYBRID_MAP //混合图， 卫星+矢量图中的街道和标注
       ]
     }));
+
+    addTrafficControl();//添加交通流量图
   }
 
   /**
@@ -200,9 +228,9 @@
    **/
   function addMarkerPolyline(){
     var polyline = new BMap.Polyline([
-        new BMap.Point(117.2972,31.8988),
-        new BMap.Point(117.2872,31.9088)
-      ],
+      new BMap.Point(117.2972,31.8988),
+      new BMap.Point(117.2872,31.9088)
+    ],
       {
         strokeColor:"blue",
         strokeWeight:6,
@@ -218,7 +246,6 @@
       addSimpleInfo(center,"你点了这条线。")
     })
   }
-
 
   /**
    * 添加自定义标注
@@ -278,7 +305,6 @@
     map.addOverlay(new BMapLib.TextIconOverlay(new BMap.Point(117.3465,31.88641), 99));
   }
 
-
   /**
    * 添加自定义图标标注
    **/
@@ -307,6 +333,7 @@
 
     addMarkerInfo(marker);
   }
+
 
   var myRM;
   var myRichMarker1;
@@ -433,26 +460,24 @@
     if(myRichMarker2){
       map.removeOverlay(myRichMarker2);
     }
-  }
+  };
 
-
-  function addInfoBoxes(){
-    addSimpleInfo();
-  }
 
   /**
-   * 添加信息框
+   * 添加简单信息框
    */
-  function addSimpleInfo(){
+  function addSimpleInfo(point,content){
     var opts = {
       width:250,
       height:100,
-      title:"Hello"
+      title:"<div class='title' style='color: #4FA5FC'><strong>信息窗口</strong></div>"
     };
-    var pt = new BMap.Point(117.2872, 31.9088);
-
-    var infoWindow = new BMap.InfoWindow("World",opts);
-    map.openInfoWindow(infoWindow,pt);
+    var infoWindow = new BMap.InfoWindow(content,opts);
+    map.openInfoWindow(infoWindow,point);
+    //
+    // marker.addEventListener("onclick",function (e) {
+    //   infoWindow.open(marker);
+    // });
   }
 
   /**
@@ -489,21 +514,263 @@
     });
   }
 
+  var markerCluster = null;
+
+  var i =1;
+
+  var defaultStyles;
+
+  var myStyles = [{
+    url: '/bdMap/img/cluster/m1.png',
+    size: new BMap.Size(53, 52),
+    //opt_anchor: [16, 0],
+    textColor: '#f5f1f6',
+    opt_textSize: 10
+  }, {
+    url: '/bdMap/img/cluster/m2.png',
+    size: new BMap.Size(56, 55),
+    //opt_anchor: [40, 35],
+    textColor: '#ebecf1',
+    opt_textSize: 12
+  }, {
+    url: '/bdMap/img/cluster/m3.png',
+    size: new BMap.Size(78, 77),
+    //opt_anchor: [32, 0],
+    textColor: '#e5e6ec',
+    opt_textSize: 14
+  }];
+
   /**
-   * 添加简单信息框
+   * 点的聚合
    */
-  function addSimpleInfo(point,content){
-    var opts = {
-      width:250,
-      height:100,
-      title:"<div class='title' style='color: #4FA5FC'><strong>信息窗口</strong></div>"
-    };
-    var infoWindow = new BMap.InfoWindow(content,opts);
-    map.openInfoWindow(infoWindow,point);
-    //
-    // marker.addEventListener("onclick",function (e) {
-    //   infoWindow.open(marker);
-    // });
+  function setCluster(){
+
+    var MAX = 100 * 1;
+    var markers = [];
+    var pt = null;
+    var i=0;
+    for(;i < MAX; i++){
+      pt = new BMap.Point(Math.random() * 40 + 85, Math.random() * 30 + 21);
+      markers.push(new BMap.Marker(pt));
+    }
+
+    if(markerCluster){
+      markerCluster.addMarkers(markers);
+    } else {
+      markerCluster = new BMapLib.MarkerClusterer(map,{markers:markers}); //请记住是 MarkerClusterer
+    }
+
+    if(!defaultStyles)
+    {
+      defaultStyles = markerCluster.getStyles();
+    }
   }
+
+  var styleType =0;
+  function changStyles(){
+    if(styleType == 0){
+      markerCluster.setStyles(myStyles);
+      styleType = 1;
+    } else if(styleType == 1){
+      markerCluster.setStyles(defaultStyles);
+      styleType = 0;
+    }
+  }
+
+  /**
+   * 取消点聚合
+   */
+  function withoutCluster(){
+    if(markerCluster)
+      markerCluster.clearMarkers();
+
+    var MAX = 100;
+    var pt = null;
+    var i=0;
+    for(;i < MAX; i++){
+      pt = new BMap.Point(Math.random() * 40 + 85, Math.random() * 30 + 21);
+      var marker = new BMap.Marker(pt);
+      map.addOverlay(marker);
+    }
+  }
+
+
+  function addTrafficControl(){
+    var ctrl = new BMapLib.TrafficControl({
+      showPanel: false //是否显示路况提示面板
+    });
+    map.addControl(ctrl);
+    ctrl.setAnchor(BMAP_ANCHOR_BOTTOM_RIGHT);
+  }
+
+  var trafficLayer = null;//交通流量图层
+  var trafficType = 0 ;
+  /**
+   * 添加交通流量图层
+   */
+  function showTrafficLayer(){
+
+    if(trafficType == 0){
+      addTrafficeLayer();
+      trafficType = 1;
+    } else {
+      removeTrafficLayer();
+      trafficType = 0 ;
+    }
+  }
+
+  function addTrafficeLayer(){
+    trafficLayer = new BMap.TrafficLayer();
+    map.addTileLayer(trafficLayer);
+  }
+
+  function removeTrafficLayer(){
+    if(trafficLayer){
+      map.removeTileLayer(trafficLayer);
+    }
+  }
+
+  // 添加地图绘制功能
+  var overlays = [];
+  var overlaycomplete = function(e){
+    overlays.push(e.overlay);
+  }
+
+  function clearAll(){
+    for(var i=0;i< overlays.length;i++){
+      map.removeOverlay(overlay);
+    }
+    overlays.length =0;
+  }
+
+  function addDrawManager(){
+    var styleOptions = {
+      storkColor:"red",
+      fillColor:"red",
+      strokeWeight:3,
+      strokeOpacity:0.7,
+      fillOpacity: 0.6,
+      strokeStyle:'solid'
+    }
+
+    var drawingManager = new BMapLib.DrawingManager(map,{
+      _isOpen:false,
+      enableDrawingTool:true,
+      drawingToolOptions:{
+        anchor: BMAP_ANCHOR_TOP_RIGHT,
+        offset: new BMap.Size(5,5)
+      },
+      circleOptions:styleOptions,
+      polylineOptions:styleOptions,
+      polygonOptions: styleOptions,
+      rectangleOptions: styleOptions
+    });
+    drawingManager.addEventListener('overlaycomplete',overlaycomplete);
+
+  }
+
+  // 添加Canvas2D覆盖物
+  var canvasLayer = null;
+
+  function addCanvasLayer(){
+
+    /**
+     * 如果已存在，则删除，否则添加多个后，无法通过 removeCanvasLayer 函数删除，
+     **/
+    if(canvasLayer){
+      removeCanvasLayer();
+      canvasLayer = null;
+    }
+
+    canvasLayer = new BMap.CanvasLayer({
+      update:update
+    });
+
+    function update(){
+      var ctx = this.canvas.getContext("2d");
+      if(!ctx){
+        return;
+      }
+
+      ctx.clearRect(0,0,ctx.canvas.width,ctx.canvas.height);
+      var temp = {};
+      ctx.fillStyle = "rgba(50,50,255,0.7)";
+      ctx.beginPath();
+      var data = [
+        new BMap.Point(117.3223,31.8534),
+        new BMap.Point(117.3568,31.85863),
+        new BMap.Point(117.3465,31.88641)
+      ];
+      for(var i=0,len = data.length; i<len;i++) {
+        var pixel = map.pointToPixel(data[i]);
+        ctx.fillRect(pixel.x,pixel.y,30,30);
+      }
+    }
+    map.addOverlay(canvasLayer);
+  }
+
+  //移除canvasLayer
+  function removeCanvasLayer(){
+    if(canvasLayer){
+      map.removeOverlay(canvasLayer);
+    }
+  }
+
+  /**
+   * 添加地图事件
+   */
+  function addMapEvents() {
+
+    map.addEventListener("zoomend",function () {
+      console.log("地图缩放至" + this.getZoom()+"级");
+    })
+
+    function showinfo(e){
+      console.log(e.point.lng + "," + e.point.lat);
+      map.removeEventListener("click",showinfo);
+    }
+
+    map.addEventListener("click",showinfo);
+  }
+
+  var local = null; //公共变量 查询对象
+  var rendOpts = {
+    map:map,
+    autoViewport:true,
+    panel:"results",
+    selectFirstResult:false
+  };
+
+  var searchOpts = {
+    renderOptions: rendOpts,
+    pageCapacity:6
+  };
+
+  function clearSearch(){
+    if(local){
+      local.clearResults();
+    }
+  }
+  /**
+   * POI搜索
+   */
+  function poiSearch(){
+    clearSearch();
+    local = new BMap.LocalSearch(map,searchOpts);
+    local.search("公园");
+  };
+
+  function nearbySearch(){
+    clearSearch();
+    local = new BMap.LocalSearch(map,searchOpts);
+    local.searchNearby("酒店","三里庵");
+  }
+
+  function inBoundSearch(){
+    clearSearch();
+    local = new BMap.LocalSearch(map,searchOpts);
+    local.searchInBounds("银行",map.getBounds());
+  }
+
 
 </script>
