--- a/bdMap/htmls/index-bmaplib.html
+++ b/bdMap/htmls/index-bmaplib.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,10 +56,13 @@
   <script type="text/javascript" src="http://api.map.baidu.com/library/MarkerClusterer/1.2/src/MarkerClusterer_min.js"></script>
   <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
   <script type="text/javascript" src="http://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.js"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
 
   <script type="text/javascript" src="../js/BMapLib/RichMarker.min.js"></script>
   <script type="text/javascript" src="../js/BMapLib/InfoBox.min.js"></script>
 
+  <script type="text/javascript" src="../data/points-sample-data.js"></script>
   <script type="text/javascript" src="../js/main.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/01addMap.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/02addControl.js"></script>
@@ -69,12 +73,17 @@
   <script type="text/javascript" src="../js/BMapLib/library/07cluster.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/08layers.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/09mapEvents.js"></script>
-<!--  <script type="text/javascript" src="../js/BMapLib/library/10poiSearch.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapLib/library/10poiSearch.js"></script> 单独放在一个js文件中，不能正常显示-->
   <script type="text/javascript" src="../js/BMapLib/library/11addressDecode.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/12routeSearch.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/13geoLocation.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/14panorama.js"></script>
   <script type="text/javascript" src="../js/BMapLib/library/15autoComplete.js"></script>
+  <script type="text/javascript" src="../js/BMapLib/library/16vectorsymbol.js"></script>
+  <script type="text/javascript" src="../js/BMapLib/library/17heatmap.js"></script>
+  <script type="text/javascript" src="../js/BMapLib/library/18bigdata.js"></script>
+  <script type="text/javascript" src="../js/BMapLib/library/19trace.js"></script>.
+  <script type="text/javascript" src="../js/BMapLib/library/20lushu.js"></script>
 <!--  此Key为测试用，可能随时会被删除，请替换为自己的key。-->
 </head>
 <body>
@@ -91,41 +100,43 @@
 
 </div>
 
-<div style="width: 200px;height: 100px;position: absolute;margin-top: 900px;margin-left:5px;z-index: 100;">
+
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 800px;margin-left:5px;z-index: 101;">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="添加富标注" onclick="addRichMarker()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除富标注" onclick="removeRichMarker()">
+
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue;color: antiquewhite;" type="button" value="添加标注" onclick="addMapMarker()">
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue;color: antiquewhite;" type="button" value="删除标注" onclick="removeMapMarker()">
+
   <input style="width: 80px;height: 30px;padding-left: 10px; background-color: royalblue;color: antiquewhite; border-radius: 2px;" type="button" value="青花瓷" onclick="setMapStyleFromId()">
   <input style="width: 80px;height: 30px;padding-left: 10px; background-color: #69b0ac;color: antiquewhite;" type="button" value="葱油绿" onclick="setMapStyleFromJson()">
 </div>
 
-<div style="width: 200px;height: 100px;position: absolute;margin-top: 900px;margin-left:175px;z-index: 101;">
-  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue;color: antiquewhite;" type="button" value="添加标注" onclick="addMapMarker()">
-  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue;color: antiquewhite;" type="button" value="删除标注" onclick="removeMapMarker()">
-</div>
-
-<div style="width: 200px;height: 100px;position: absolute;margin-top: 900px;margin-left:345px;z-index: 101;">
-  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="添加富标注" onclick="addRichMarker()">
-  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除富标注" onclick="removeRichMarker()">
-</div>
-<div style="width: 300px;height: 100px;position: absolute;margin-top: 900px;margin-left:520px;z-index: 101;">
+<div style="width: 300px;height: 100px;position: absolute;margin-top: 800px;margin-left:200px;z-index: 101;">
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="设置点聚合" onclick="setCluster()">
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="改变样式" onclick="changStyles()">
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除点聚合" onclick="withoutCluster()">
-</div>
-
-<div style="width: 200px;height: 100px;position: absolute;margin-top: 900px;margin-left:800px;z-index: 101;">
-  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="矢量图层" onclick="addCanvasLayer()">
-  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除图层" onclick="removeCanvasLayer()">
-</div>
-<div style="width: 300px;height: 100px;position: absolute;margin-top: 900px;margin-left:980px;z-index: 101;">
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="兴趣点搜索" onclick="poiSearch()">
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="附近搜索" onclick="nearbySearch()">
   <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="范围搜索" onclick="inBoundSearch()">
 </div>
 
-<div style="width: 300px;height: 100px;position: absolute;margin-top: 900px;margin-left:1250px;z-index: 101;">
-  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="地址解析" onclick="geoCode()">
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 800px;margin-left:480px;z-index: 101;">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="矢量图层" onclick="addCanvasLayer()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除图层" onclick="removeCanvasLayer()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="切片图层" onclick="addTileLayer()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除图层" onclick="removeTileLayer()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="地面叠加层" onclick="addGroundOverlay()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除图层" onclick="removeGroundOverlay()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="矢量图标" onclick="addVectorSymbol()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="删除图标" onclick="hideVectorSymbol()">
 </div>
 
-<div style="width: 300px;height: 100px;position: absolute;margin-top: 900px;margin-left:1350px;z-index: 101;">
+<div style="width: 300px;height: 100px;position: absolute;margin-top: 800px;margin-left:680px;z-index: 101;">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="地址解析" onclick="geoCode()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="定位" onclick="mapLocation()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="全景图" onclick="mapPanorama()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="热力图" onclick="addHeatMap()">
   <select id="routeSelect" style="width: 100px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;"  onChange="routeSearch()">
     <option value="none">路线类型</option>
     <option value="drive">驾车路线</option>
@@ -133,14 +144,11 @@
     <option value="walk">步行路线</option>
     <option value="ride">骑行路线</option>
   </select>
-</div>
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="海量数据" onclick="addBigData()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="单点沿线" onclick="singleTrace()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="多点沿线" onclick="multiTrace()">
+  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="路书" onclick="addLuShu()">
 
-<div style="width: 300px;height: 100px;position: absolute;margin-top: 900px;margin-left:1460px;z-index: 101;">
-  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="定位" onclick="mapLocation()">
-</div>
-
-<div style="width: 300px;height: 100px;position: absolute;margin-top: 900px;margin-left:1560px;z-index: 101;">
-  <input style="width: 80px;height: 30px;padding-left: 5px; background-color: steelblue;color: antiquewhite;" type="button" value="全景图" onclick="mapPanorama()">
 </div>
 
 <div id="allmap"> </div>
