--- a/bdMap/htmls/index-bmaplib.html
+++ b/bdMap/htmls/index-bmaplib.html
@@ -29,7 +29,7 @@
   </style>
   <style type="text/css">
     .infoBoxContent{font-size:12px;}
-    .infoBoxContent .title{background:url(/bdMap/img/title.jpg) no-repeat;height:42px;width:272px;}
+    .infoBoxContent .title{background:url(../img/title.jpg) no-repeat;height:42px;width:272px;}
     .infoBoxContent .title strong{font-size:14px;line-height:42px;padding:0 10px 0 5px;}
     .infoBoxContent .title .price{color:#FFFF00;}
     .infoBoxContent .list{width:268px;border:solid 1px #4FA5FC;border-top:none;background:#fff;height:260px;}
@@ -58,6 +58,8 @@
   <script type="text/javascript" src="http://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.js"></script>
   <script type="text/javascript" src="http://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
   <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
+  <script type="text/javascript" src="//api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+  <link rel="stylesheet" href="//api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
 
   <script type="text/javascript" src="../js/BMapLib/RichMarker.min.js"></script>
   <script type="text/javascript" src="../js/BMapLib/InfoBox.min.js"></script>
