--- a/bdMap/htmls/index-bmapgl.html
+++ b/bdMap/htmls/index-bmapgl.html
@@ -4,7 +4,6 @@
   <title>百度三维地图</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="initial-scale=1.0,user-scalable=no" />
-
   <title>地图底图</title>
   <style type="text/css">
     body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
@@ -17,7 +16,6 @@
       width: 100%;
       height: 100%;
     }
-
     .infoBoxContent {
       font-size: 12px;
     }
@@ -108,9 +106,39 @@
       cursor: pointer;
       color: #3a79b5;
     }
+
+    .info {
+      z-index: 999;
+      width: auto;
+      min-width: 22rem;
+      padding: .75rem 1.25rem;
+      margin-left: 5rem;
+      position: fixed;
+      top: 0.3rem;
+      background-color: rgba(265, 265, 265, 0.9);
+      border-radius: .25rem;
+      font-size: 14px;
+      color: #666;
+      box-shadow: 0 2px 6px 0 rgba(27, 142, 236, 0.3);
+    }
+    #zoominput {
+      height: 24px;
+      width: 80px;
+      padding-left: 8px;
+    }
+    #change-btn {
+      height: 30px;
+      background: #5679ea;
+      border: 0;
+      padding: 0 10px 0 10px;
+      margin: 10px 8px 0 0;
+      cursor: pointer;
+      border-radius: 2px;
+      color: #fff;
+      font-size: 14px;
+    }
   </style>
 
-  <link type="text/css" rel="stylesheet" href="/bdMap/js/00%20gl/api.css"></link>
   <!--  去除“百度地图”左下角字样  -->
   <style type="text/css">
     .BMap_cpyCtrl {
@@ -120,199 +148,140 @@
       display: none;
     }
   </style>
+  <link type="text/css" rel="stylesheet" href="../css/api.css">
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
   <script type="text/javascript" src="http://api.map.baidu.com/api?type=webgl&v=1.0&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
-<!--  <link href="//mapopen.bj.bcebos.com/github/BMapGLLib/InfoBox/src/InfoBox.js" rel="stylesheet">-->
-<!--  <script src="/bdMap/js/BMapGLLib/InfoBoxGL.js"></script>-->
-<!--  <link href="//mapopen.bj.bcebos.com/github/BMapGLLib/RichMarker/src/RichMarker.min.js" rel="stylesheet">-->
-  <script src="/bdMap/js/BMapGLLib/RichMarkerGL.js"></script>
-<!--  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>-->
-  <script type="text/javascript" src="/bdMap/js/00%20gl/stations.js"></script>
-  <script type="text/javascript" src="/bdMap/js/MapLib/CoordTransferd.js"></script>
-  <script type="text/javascript" src="/bdMap/js/MapLib/proj4-src.js"></script>
+
+  <script type="text/javascript" src="../js/stations.js"></script>
+  <link href="//mapopen.bj.bcebos.com/github/BMapGLLib/InfoBox/src/InfoBox.js" rel="stylesheet">
+  <script src="//mapopen.bj.bcebos.com/github/BMapGLLib/InfoBox/src/InfoBox.js"></script>
+
+
+  <link href="//mapopen.bj.bcebos.com/github/BMapGLLib/RichMarker/src/RichMarker.min.js" rel="stylesheet">
+  <script src="//mapopen.bj.bcebos.com/github/BMapGLLib/RichMarker/src/RichMarker.min.js"></script>
+
+
+  <!--  <script type="text/javascript" src="../js/BMapGLLib/RichMarkerGL.js"></script>-->
+  <script type="text/javascript" src="../js/MapLib/CoordTransferd.js"></script>
+  <script type="text/javascript" src="../js/MapLib/proj4-src.js"></script>
+
+  <script type="text/javascript" src="../data/points-sample-data.js"></script>
+  <script type="text/javascript" src="../js/mainGL.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/01addMap.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/02addControl.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/03mapProperty.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/04styleMap.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/05marker.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/06vectorsymbol.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/07layers.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/08infoWindow.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/09richMarker.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/10mapEvents.js"></script>
+  <script type="text/javascript" src="../js/BMapGLLib/library/11ContextMenu.js"></script>
+
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/07cluster.js"></script>-->
+<!--  &lt;!&ndash;  <script type="text/javascript" src="../js/BMapLib/library/10poiSearch.js"></script> 单独放在一个js文件中，不能正常显示&ndash;&gt;-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/11addressDecode.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/12routeSearch.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/13geoLocation.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/14panorama.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/15autoComplete.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/16vectorsymbol.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/17heatmap.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/18bigdata.js"></script>-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/19trace.js"></script>.-->
+<!--  <script type="text/javascript" src="../js/BMapGLLib/library/20lushu.js"></script>-->
 <!--  此Key为测试用，可能随时会被删除，请替换为自己的key。-->
 </head>
 <body>
-<div style="width: 200px;height: 100px;position: absolute;margin-top: 830px;margin-left:5px;z-index: 100;">
-  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: royalblue;color: antiquewhite;" type="button" value="移动" onclick="startAnimation()">
-  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: #397d4e; color: antiquewhite;" type="button" value="葱油绿" onclick="setMapStyleFromJson()">
+
+<div class = "info">
+  <div>改变地图级别:</div>
+  <input id="zoominput" type="number" step="1" min="4" max="20" value="10")>
+  <button id="change-btn1" onclick="setNewZoom()">设置级别</button>
+  <button id="change-btn2" onclick="map.zoomIn()">放大一级</button>
+  <button id="change-btn3" onclick="map.zoomOut()">缩小一级</button>
+  <button id="change-btn4" onclick="getMapZoom()">获取当前级别</button>
+  <div>
+    <button  onclick = "showText()">显示POI文字</button>
+    <button  onclick = "hideText()">隐藏POI文字</button>
+    <br/>
+    <button  onclick = "showIcon()">显示POI的Icon</button>
+    <button  onclick = "hideIcon()">隐藏POI的Icon</button>
+    <br/>
+    <button  onclick = "showOverlay()">显示覆盖物</button>
+    <button  onclick = "hideOverlay()">隐藏覆盖物</button>
+    <br/>
+    <button  onclick = "show3Dbuild()">显示3D建筑物</button>
+    <button  onclick = "hide3Dbuild()">隐藏3D建筑物</button>
+    <br/>
+    <button  onclick = "showTilelay()">显示图层</button>
+    <button  onclick = "hideTilelay()">隐藏图层</button>
+  </div>
 </div>
- <div id="allmap"></div>
+
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 800px;margin-left:5px;z-index: 100;">
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: royalblue;color: antiquewhite;" type="button" value="景泰蓝" onclick="setMapStyleFromId()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: #397d4e; color: antiquewhite;" type="button" value="葱油绿" onclick="setMapStyleFromJson()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue;color: antiquewhite;" type="button" value="普通模式" onclick="setMapNormal()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="地球模式" onclick="setMapEarth()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue;color: antiquewhite;" type="button" value="标注" onclick="addMapMarker()">
+</div>
+
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 830px;margin-left:105px;z-index: 100;">
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="镂空面" onclick="getBoundary()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="线面圆可编辑" onclick="editPolygon()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="贝塞尔曲线" onclick="addBezierCurve()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="3D棱柱" onclick="addPrism()">
+</div>
+
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 830px;margin-left:105px;z-index: 100;">
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="地面图片层" onclick="addGroundOverlay()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="地面Canvas层" onclick="addCanvasLayer()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="地面视频层" onclick="addVideoLayer()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="交通路况" onclick="addTrafficLayer()">
+</div>
+
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 800px;margin-left:205px;z-index: 100;">
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="信息窗口" onclick="addSimpleInfo()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="Html信息" onclick="addContentInfo()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="窗口内容" onclick="getInfoContent()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="InfoBox窗口" onclick="addInfoBox()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="RichMarker窗口" onclick="addRichMarker()">
+</div>
+
+<div style="width: 200px;height: 100px;position: absolute;margin-top: 800px;margin-left:305px;z-index: 100;">
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="加载完成事件" onclick="addMapLoaded()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="添加点击事件" onclick="addMapClick()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="删除点击事件" onclick="removeMapClick()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="右键菜单" onclick="addMapContextMenu()">
+  <br/>
+  <input style="width: 80px;height: 30px;padding-left: 10px; background-color: steelblue; color: antiquewhite;" type="button" value="删除右键" onclick="removeMapContextMenu()">
+</div>
+
+<div id="allmap"></div>
+
 </body>
 </html>
 <script type="text/javascript">
-  var map = new BMapGL.Map("allmap");
-
-  var point = new BMapGL.Point(119.89157,29.450731);
-
-  map.centerAndZoom(point,15);// 初始化地图，中心点和缩放级别
-  map.enableScrollWheelZoom(true);
-
-  //map.setHeading(64.5);
-  map.setTilt(50);
-
-  map.setMapStyleV2({
-    styleId:'3d71ab411f410625c74c5e0343a8a2be'
-  });
-
-  //setMapPrism("浦江县");
-  addPumpStations(datas);
-
-  function setMapPrism(AreaName){
-    var bd = new BMapGL.Boundary();
-    bd.get(AreaName, function (rs) {
-      var count = rs.boundaries.length; //行政区域的点有多少个
-      var pointArray = [];
-      for (var i = 0; i < count; i++) {
-        var path = [];
-        str = rs.boundaries[i].replace(' ', '');
-        points = str.split(';');
-        for (var j = 0; j < points.length; j++) {
-          var lng = points[j].split(',')[0];
-          var lat = points[j].split(',')[1];
-          path.push(new BMapGL.Point(lng, lat));
-        }
-
-
-        var prism = new BMapGL.Prism(path, 800, {
-          topFillColor: '#5679ea',
-          topFillOpacity: 0.3,
-          sideFillColor: '#a1a1ec',
-          sideFillOpacity: 0.9
-
-        });
-        map.addOverlay(prism);
-      }
-    });
-  }
-
-  function addPumpStations (data) {
-
-    keyFrames = [];
-    let ki = 0;
-
-    data.map(function(item) {
-
-      let coordinate = [];
-
-      curPos = curPrecentage[ki];
-
-      coordinate = CoordTransferd.gcj02_bd09ll(item.x, item.y);
-
-      if (item.type === "泵站") {
-        console.log('blue' + item.name + 'X:' + coordinate[0] + coordinate[1]);
-        setRichMarker('blue', item.name, coordinate[0], coordinate[1]);
-      } else {
-        console.log('orange' + item.name + 'X:' + coordinate[0] + coordinate[1]);
-        setRichMarker('orange', item.name, coordinate[0], coordinate[1]);
-      }
-
-      var keyFrame = {
-        center: new BMapGL.Point(coordinate[0],coordinate[1]),     // 定义第一个关键帧帧地图中心点
-        zoom: 18,                                      // 定义第一个关键帧地图等级
-        tilt: 60,                                      // 定义第一个关键帧地图倾斜角度
-        heading: 0,                                    // 定义第一个关键帧地图旋转方向
-        percentage: curPos
-      }
-      keyFrames.push(keyFrame);
-
-      ki ++;
-
-    });
-
-    //startAnimation()
-
-    //panToArrays();
-
-  }
-
-  function setRichMarker (className, name, x, y) {
-    let htmlContent =  '<div class="tag-container ' + className + '">' +
-      '<span class="tag-title">' + name +'</span>' +
-      '</div>';
-
-    var point = new BMapGL.Point(x,y);
-
-    var marker = new BMapGLLib.RichMarker(htmlContent,point,{
-      "anchor":new BMapGL.Size(0,0),
-      "enableDraggin":false
-    });
-
-    marker.addEventListener("click",function () {
-      alert(name);
-    })
-
-    map.addOverlay(marker);
-  }
-
-  var animation = null;
-
-  function startAnimation() {
-
-    var opts = {
-      duration: 50000,
-      delay:5000,
-      interation:'INFINITE'
-    }
-
-    animation = new BMapGL.ViewAnimation(keyFrames,opts);
-    animation.addEventListener('animationstart',function (e){
-      console.log('start');
-    });
-    animation.addEventListener('animationiterations',function (e){
-      console.log('onanimationiterations');
-    });
-    animation.addEventListener('animationend',function (e) {
-      console.log('end');
-    });
-    animation.addEventListener('animationcancel',function (e) {
-      console.log('cancel');
-    })
-
-    map.startViewAnimation(animation);
-  }
-
-
-  /**
-   * 移动地图中心点
-   **/
-  function mapFly() {
-      let i = ci % 9;
-      var keyFrame = keyFrames[i];
-      if(keyFrame && keyFrame.center){
-        map.flyTo(keyFrame.center,13);
-        console.log(ci+":"+keyFrame.center);
-        ci++;
-
-      }
-  }
-
-  /**
-   * 设置定时器
-   **/
-  function panToArrays(){
-    setInterval(mapFly,5000);
-  }
-
-
-  /**
-   * 使用样式ID设置地图样式
-   */
-  function setMapStyleFromId(){
-    map.setMapStyleV2({
-      styleId:'f1d776a2b7da27c7455843c309a9fac3'
-    });
-  }
-
-  /**
-   * 使用样式Json文件设置地图样式
-   */
-  function setMapStyleFromJson(){
-
-    $.getJSON('/bdMap/data/custom_map_config.json',function (json){
-      map.setMapStyleV2({
-        styleJson:json
-      });
-    });
-  }
-
+  setMap();
 </script>
