--- a/bdMap/htmls/mapVGL/53-od-flyline.html
+++ b/bdMap/htmls/mapVGL/53-od-flyline.html
@@ -103,7 +103,7 @@
   var scale = 2.5;
 
   var jiuduanIcon = new BMapGL.Icon(
-    'http://huiyan.baidu.com/github/tools/gis-drawing/static/images/jiuduanxian.png',
+    '../../img/jiuduanxian-light.png',
     new BMapGL.Size(jiuduanwidth / scale, jiuduanheight / scale),
     {
       imageSize: new BMapGL.Size(jiuduanwidth / scale, jiuduanheight / scale)
