change the baiduKey

--- a/bdMap/htmls/index-bmapgl.html
+++ b/bdMap/htmls/index-bmapgl.html
@@ -201,7 +201,7 @@
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
-  <script type="text/javascript" src="http://api.map.baidu.com/api?type=webgl&v=1.0&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?type=webgl&v=1.0&ak=baiduKey"></script>
 
   <script type="text/javascript" src="../js/stations.js"></script>
   <link href="//mapopen.bj.bcebos.com/github/BMapGLLib/InfoBox/src/InfoBox.js" rel="stylesheet">
