--- a/bdMap/htmls/index-bmaplib.html
+++ b/bdMap/htmls/index-bmaplib.html
@@ -49,7 +49,7 @@
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
-  <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=baiduKey"></script>
 
 
   <script type="text/javascript" src="http://api.map.baidu.com/library/TextIconOverlay/1.2/src/TextIconOverlay_min.js"></script>
