--- a/bdMap/htmls/mapV/23-polygon-intensity.html
+++ b/bdMap/htmls/mapV/23-polygon-intensity.html
@@ -26,7 +26,7 @@
 <div id="map"></div>
 <canvas id="canvas"></canvas>
 
-<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
+<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=baiduKey"></script>
 <script type="text/javascript" src="../../js/mapv.js"></script>
 
 <script type="text/javascript">
