--- a/bdMap/htmls/mapV/06-point-time-1.html
+++ b/bdMap/htmls/mapV/06-point-time-1.html
@@ -35,7 +35,7 @@
 <div id="time"></div>
 
 <script type="text/javascript" src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
+<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=baiduKey"></script>
 <script type="text/javascript" src="../../js/mapv.js"></script>
 
 <script type="text/javascript">
