--- a/bdMap/htmls/mapV/10-nyc-taxi.html
+++ b/bdMap/htmls/mapV/10-nyc-taxi.html
@@ -51,7 +51,7 @@
 </div>
 
 <script type="text/javascript" src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
+<script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=baiduKey"></script>
 <script type="text/javascript" src="../../js/mapv.js"></script>
 <script type="text/javascript" src="../../js/dat.gui.js"></script>
 
