--- a/bdMap/htmls/mapVGL/20-threelayer-flyline-car.html
+++ b/bdMap/htmls/mapVGL/20-threelayer-flyline-car.html
@@ -19,7 +19,7 @@
     }
 
   </style>
-  <script type="text/javascript" src="//api.map.baidu.com/api?v=1.0&type=webgl&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
+  <script type="text/javascript" src="//api.map.baidu.com/api?v=1.0&type=webgl&ak=baiduKey"></script>
   <script type="text/javascript" src="//mapv.baidu.com/build/mapv.min.js"></script>
   <script type="text/javascript" src="../../js/common.js"></script>
   <script type="text/javascript" src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.119/dist/mapvgl.min.js"></script>
