--- a/bdMap/htmls/mapVGL/36-shape.html
+++ b/bdMap/htmls/mapVGL/36-shape.html
@@ -19,7 +19,7 @@
       margin: 0;
     }
   </style>
-  <script src="//api.map.baidu.com/api?v=1.0&type=webgl&ak=Zyq6TjFQ1679hxUWSUhud4i03GThAEGI"></script>
+  <script src="//api.map.baidu.com/api?v=1.0&type=webgl&ak=baiduKey"></script>
   <script src="//mapv.baidu.com/build/mapv.min.js"></script>
   <script src="../../js/common.js"></script>
   <script src="https://code.bdstatic.com/npm/mapvgl@1.0.0-beta.119/dist/mapvgl.min.js"></script>
